Añado boton de whatsapp

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
             </div>
         </li>
     </ul>
+    <div class="footer">
+        <a href="https://wa.me/5491122815473" target="_blank">
+            <div class="wpp-logo"></div>
+            <p>Pedidos al 1122815473</p>
+        </a>
+    </div>
 </body>
 
 </html>
