Cargo las imagenes

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </label>
             <div class="accordion-description">
                 <div class="accordion-description-content">
-                    <div class="img-product"></div>
+                    <img src="./img/ensalada-front.jpeg" class="img-product">
                     <div class="price-product">
                         <p>UNIDAD</p>
-                        <P>$120</P>
+                        <P>$180</P>
                     </div>
                 </div>
             </div>
@@ -38,10 +38,15 @@
             </label>
             <div class="accordion-description">
                 <div class="accordion-description-content">
-                    <div class="img-product"></div>
+                    <img src="./img/triple.jpeg" class="img-product">
                     <div class="price-product">
                         <p>UNIDAD</p>
-                        <P>$120</P>
+                        <P>$180</P>
+                    </div>
+                    <img src="./img/bandeja.jpeg" class="img-product">
+                    <div class="price-product">
+                        <p>UNIDAD</p>
+                        <P>$450</P>
                     </div>
                 </div>
             </div>
@@ -54,10 +59,10 @@
             </label>
             <div class="accordion-description">
                 <div class="accordion-description-content">
-                    <div class="img-product"></div>
+                    <img src="./img/pebete.jpeg" class="img-product">
                     <div class="price-product">
                         <p>UNIDAD</p>
-                        <P>$120</P>
+                        <P>$180</P>
                     </div>
                 </div>
             </div>
