--- a/index.html
+++ b/index.html
@@ -2,78 +2,76 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COCO ENSALADAS - Productos</title>
-    <link rel="stylesheet" href="./styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>COCO ENSALADAS - Productos</title>
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="icon" type="image/x-icon" href="./img/icons/favicon.ico">
+  <script src="./main.js" defer></script>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Nuestros productos</h1>
+  <div class="header">
+    <h1>Nuestros productos</h1>
+  </div>
+  <div class="main">
+
+    <div class="accordion">
+      <div class="accordion-button">ENSALADA DE FRUTAS</div>
+      <div class="accordion-panel">
+        <div class="product">
+          <img src="./img/products/ensalada.png" alt="Ensalada de frutas" class="img-product">
+          <div class="price-product">
+            <p>UNIDAD</p>
+            <P>$180</P>
+        </div>
+        </div>
+      </div>
     </div>
-    <ul class="accordion">
-        <li>
-            <input type="checkbox" id="accordion-first-child">
-            <label for="accordion-first-child" class="accordion-button">
-                <div class="accordion-label">ENSALADA DE FRUTAS</div>
-                <div class="accordion-icon"></div>
-            </label>
-            <div class="accordion-description">
-                <div class="accordion-description-content">
-                    <img src="./img/ensalada-front.jpeg" class="img-product">
-                    <div class="price-product">
-                        <p>UNIDAD</p>
-                        <P>$180</P>
-                    </div>
-                </div>
-            </div>
-        </li>
-        <li>
-            <input type="checkbox" id="accordion-second-child">
-            <label for="accordion-second-child" class="accordion-button">
-                <div class="accordion-label">SANDWICH DE MIGA</div>
-                <div class="accordion-icon"></div>
-            </label>
-            <div class="accordion-description">
-                <div class="accordion-description-content">
-                    <img src="./img/triple.jpeg" class="img-product">
-                    <div class="price-product">
-                        <p>UNIDAD</p>
-                        <P>$180</P>
-                    </div>
-                    <img src="./img/bandeja.jpeg" class="img-product">
-                    <div class="price-product">
-                        <p>UNIDAD</p>
-                        <P>$450</P>
-                    </div>
-                </div>
-            </div>
-        </li>
-        <li>
-            <input type="checkbox" id="accordion-third-child">
-            <label for="accordion-third-child" class="accordion-button">
-                <div class="accordion-label">PEBETE</div>
-                <div class="accordion-icon"></div>
-            </label>
-            <div class="accordion-description">
-                <div class="accordion-description-content">
-                    <img src="./img/pebete.jpeg" class="img-product">
-                    <div class="price-product">
-                        <p>UNIDAD</p>
-                        <P>$180</P>
-                    </div>
-                </div>
-            </div>
-        </li>
-    </ul>
-    <div class="footer">
-        <a href="https://wa.me/5491122815473" target="_blank">
-            <div class="wpp-logo"></div>
-            <p>Pedidos al 1122815473</p>
-        </a>
+
+    <div class="accordion">
+      <div class="accordion-button">SANDWICH DE MIGA</div>
+      <div class="accordion-panel">
+        <div class="product">
+          <img src="./img/products/triangulo.png" class="img-product">
+          <div class="price-product">
+            <p>UNIDAD</p>
+            <P>$180</P>
+          </div>
+        </div>
+        <div class="product">
+          <img src="./img/products/bandeja.jpeg" class="img-product">
+          <div class="price-product">
+            <p>UNIDAD</p>
+            <P>$450</P>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="accordion">
+      <div class="accordion-button">PEBETE</div>
+      <div class="accordion-panel">
+        <div class="product">
+          <img src="./img/products/pebete.png" class="img-product">
+          <div class="price-product">
+            <p>UNIDAD</p>
+            <P>$180</P>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="footer">
+    <a href="https://wa.me/5491122815473" target="_blank">
+      <div class="wpp-logo"></div>
+      <p>Pedidos al 1122815473</p>
+    </a>
+  </div>
+
 </body>
 
 </html>
