Agrego nuevo producto

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <div class="accordion-button">ENSALADA DE FRUTAS</div>
       <div class="accordion-panel">
         <div class="product">
-          <img src="./img/products/ensalada.png" alt="Ensalada de frutas" class="img-product">
+          <img src="./img/products/ensaladas.png" alt="Ensalada de frutas" class="img-product">
           <div class="price-product">
             <p>UNIDAD</p>
-            <P>$180</P>
+            <P>$200</P>
         </div>
         </div>
       </div>
@@ -41,10 +41,17 @@
           </div>
         </div>
         <div class="product">
-          <img src="./img/products/bandeja.jpeg" class="img-product">
+          <img src="./img/products/bandeja-chica.png" class="img-product">
           <div class="price-product">
             <p>UNIDAD</p>
             <P>$450</P>
+          </div>
+        </div>
+        <div class="product">
+          <img src="./img/products/bandeja-grande.png" class="img-product">
+          <div class="price-product">
+            <p>UNIDAD</p>
+            <P>$1900</P>
           </div>
         </div>
       </div>
