Agrego infoProduct como un popup

--- a/index.html
+++ b/index.html
@@ -46,12 +46,21 @@
             <p>UNIDAD</p>
             <P>$600</P>
           </div>
+          <div class="info-product">
+            <p>x6</p>
+          </div>
         </div>
         <div class="product">
           <img src="./img/products/bandeja-grande.png" class="img-product">
           <div class="price-product">
             <p>UNIDAD</p>
             <P>$2400</P>
+          </div>
+          <div class="info-product info1">
+            <p>x24</p>
+          </div>
+          <div class="info-product info2">
+            <p>x32</p>
           </div>
         </div>
       </div>
