Agrega nuevas fotos de migas y medialunas

--- a/index.html
+++ b/index.html
@@ -1,93 +1,145 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>COCO ENSALADAS - Productos</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./img/icons/favicon.ico" />
+    <script src="./main.js" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>COCO ENSALADAS - Productos</title>
-  <link rel="stylesheet" href="./styles.css">
-  <link rel="icon" type="image/x-icon" href="./img/icons/favicon.ico">
-  <script src="./main.js" defer></script>
-</head>
+  <body>
+    <div class="header">
+      <h1>Nuestros productos</h1>
+    </div>
+    <div class="main">
+      <div class="accordion">
+        <div class="accordion-button">SANDWICH DE MIGA</div>
+        <div class="accordion-panel">
+          <div class="product">
+            <img src="./img/products/migasX3.jpeg" class="img-product-2" />
+            <div class="price-product">
+              <p>$ 475</p>
+            </div>
+            <div class="info-product">
+              <div>x 3</div>
+            </div>
+          </div>
 
-<body>
-  <div class="header">
-    <h1>Nuestros productos</h1>
-  </div>
-  <div class="main">
+          <div class="product">
+            <img src="./img/products/migasX6.jpeg" class="img-product-2" />
+            <div class="price-product">
+              <p>$ 950</p>
+            </div>
+            <div class="info-product">
+              <div>x 6</div>
+            </div>
+          </div>
 
-    <div class="accordion">
-      <div class="accordion-button">ENSALADA DE FRUTAS</div>
-      <div class="accordion-panel">
-        <div class="product">
-          <img src="./img/products/ensaladas.png" alt="Ensalada de frutas" class="img-product">
-          <div class="price-product">
-            <p>UNIDAD</p>
-            <P>$300</P>
+          <div class="product">
+            <img src="./img/products/migasX12.jpeg" class="img-product-2" />
+            <div class="price-product">
+              <p>$ 1900</p>
+            </div>
+            <div class="info-product">
+              <div>x 12</div>
+            </div>
+          </div>
+
+          <div class="product">
+            <img src="./img/products/migasX24.jpeg" class="img-product-2" />
+            <div class="price-product">
+              <p>$ 3800</p>
+            </div>
+            <div class="info-product">
+              <div>x 24</div>
+            </div>
+          </div>
+
+          <div class="product">
+            <img src="./img/products/triangulo.png" class="img-product" />
+            <div class="no-product-badge">
+              <p>NO DISPONIBLE</p>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="accordion">
+        <div class="accordion-button">MEDIALUNAS DE J Y Q</div>
+        <div class="accordion-panel">
+          <div class="product">
+            <img src="./img/products/medialunasX2.jpeg" class="img-product-2" />
+            <div class="info-product">
+              <div>x 2</div>
+            </div>
+          </div>
+
+          <div class="product">
+            <img src="./img/products/medialunasX6.jpeg" class="img-product-2" />
+            <div class="info-product">
+              <div>x 6</div>
+            </div>
+          </div>
+
+          <div class="product">
+            <img
+              src="./img/products/medialunasX12.jpeg"
+              class="img-product-2"
+            />
+            <div class="info-product">
+              <div>x 12</div>
+            </div>
+          </div>
+
+          <div class="product">
+            <img
+              src="./img/products/medialunasX24.jpeg"
+              class="img-product-2"
+            />
+            <div class="info-product">
+              <div>x 24</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion">
+        <div class="accordion-button">ENSALADA DE FRUTAS</div>
+        <div class="accordion-panel">
+          <div class="product">
+            <img
+              src="./img/products/ensaladas.png"
+              alt="Ensalada de frutas"
+              class="img-product"
+            />
+            <div class="no-product-badge">
+              <p>NO DISPONIBLE</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion">
+        <div class="accordion-button">PEBETE</div>
+        <div class="accordion-panel">
+          <div class="product">
+            <img src="./img/products/pebete.png" class="img-product" />
+            <div class="no-product-badge">
+              <p>NO DISPONIBLE</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="accordion">
-      <div class="accordion-button">SANDWICH DE MIGA</div>
-      <div class="accordion-panel">
-        <div class="product">
-          <img src="./img/products/triangulo.png" class="img-product">
-          <div class="price-product">
-            <p>UNIDAD</p>
-            <P>$300</P>
-          </div>
-        </div>
-        <div class="product">
-          <img src="./img/products/bandeja-chica.png" class="img-product">
-          <div class="price-product">
-            <p>UNIDAD</p>
-            <P>$700</P>
-          </div>
-          <div class="info-product">
-            <p>x6</p>
-          </div>
-        </div>
-        <div class="product">
-          <img src="./img/products/bandeja-grande.png" class="img-product">
-          <div class="price-product">
-            <p>UNIDAD</p>
-            <P>$2800</P>
-          </div>
-          <div class="info-product info1">
-            <p>x24</p>
-          </div>
-          <div class="info-product info2">
-            <p>x32</p>
-          </div>
-        </div>
-      </div>
+    <div class="footer">
+      <a href="https://wa.me/5491122815473" target="_blank">
+        <div class="wpp-logo"></div>
+        <p>Pedidos al 1122815473</p>
+      </a>
     </div>
-
-    <div class="accordion">
-      <div class="accordion-button">PEBETE</div>
-      <div class="accordion-panel">
-        <div class="product">
-          <img src="./img/products/pebete.png" class="img-product">
-          <div class="price-product">
-            <p>UNIDAD</p>
-            <P>$300</P>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="footer">
-    <a href="https://wa.me/5491122815473" target="_blank">
-      <div class="wpp-logo"></div>
-      <p>Pedidos al 1122815473</p>
-    </a>
-  </div>
-
-</body>
-
+  </body>
 </html>
