Agrega precio de medialunas

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         <div class="accordion-panel">
           <div class="product">
             <img src="./img/products/medialunasX2.jpeg" class="img-product-2" />
+            <div class="price-product">
+              <p>$ 350</p>
+            </div>
             <div class="info-product">
               <div>x 2</div>
             </div>
@@ -79,6 +82,9 @@
 
           <div class="product">
             <img src="./img/products/medialunasX6.jpeg" class="img-product-2" />
+            <div class="price-product">
+              <p>$ 1050</p>
+            </div>
             <div class="info-product">
               <div>x 6</div>
             </div>
@@ -89,6 +95,9 @@
               src="./img/products/medialunasX12.jpeg"
               class="img-product-2"
             />
+            <div class="price-product">
+              <p>$ 2100</p>
+            </div>
             <div class="info-product">
               <div>x 12</div>
             </div>
@@ -99,6 +108,9 @@
               src="./img/products/medialunasX24.jpeg"
               class="img-product-2"
             />
+            <div class="price-product">
+              <p>$ 4200</p>
+            </div>
             <div class="info-product">
               <div>x 24</div>
             </div>
